update sub nhom

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -26,6 +26,45 @@
     "lien_he":"Contact",
     "dang_nhap":"Log in",
     "dang_xuat":"Log out",
+    "gioi_thieu_tvu":"Introducing Tra Vinh University",
+    "tin_tuc_noi_bat":"Featured News",
+    "xem_them":"See more",
+    "doi_tac_cua_chung_toi":"Our partner",
+    "ket_noi_researchers":"connect with Researchers Team",
+    "dia_chi_researchers":"No. 126 Nguyen Thien Thanh - Group 4, Ward 5, Tra Vinh City, Tra Vinh Province",
+    "dien_thoai_rt":"Phone",
+    "kham_pha_tat_ca_tin_tuc":"Discover all the news",
+    "theo_phan_loai":"By classification",
+    "moi_thac_mac_xin_vui_long_lien_he":"Any questions please contact us",
+    "dang_ky":"Sign up",
+    "danh_sach_nhom_nghien_cuu":"List of research groups",
+    "them":"Add",
+    "tim_kiem_o_day_ne":"Search here",
+    "hien_thi":"Show",
+    "muc":"entries",
+    "dang_hien_thi":"Showing",
+    "den":"to",
+    "cua":"of",
+    "da_loc_tu_tong_so":"Filtered from total",
+    "khong_co_du_lieu":"No data",
+    "khong_tim_thay_ket_qua_phu_hop":"No matching results were found",
+    "tiep":"Next",
+    "truoc":"Previous",
+    "dau":"First",
+    "cuoi":"Last",
+    "thiet_ke_boi":"Design by",
+    "ma_nhom":"Team ID",
+    "ten_nhom":"Team name",
+    "tuy_chon":"Option",
+    "them_nhom_moi":"Add new team",
+    "luu":"Save",
+    "chinh_sua_ten_nhom":"Edit team name",
+    "them_nhom_thanh_cong":"Add team successfully!",
+    "danh_sach_thanh_vien":"Members list",
+    "ten_nhom_da_ton_tai_trong_co_so_du_lieu_vui_long_chon_ten_khac":"The group name already exists in the database, please choose another name!",
+    "co_loi_vui_long_thu_lai":"An error occurred, please try again!",
+    "chinh_sua_nhom_thanh_cong":"Team editing successful!",
+    "ten_nhom_nay_da_duoc_su_dung":"This team name is already in use!",
     "":"",
     "":"",
     "":"",
@@ -60,5 +99,38 @@
     "":"",
     "":"",
     "":"",
-    "danh_sach_thanh_vien":"Members list"
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":""
 }
