--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -24,6 +24,126 @@
     "lien_he":"Liên hệ",
     "dang_nhap":"Đăng nhập",
     "dang_xuat":"Đăng xuất",
+    "gioi_thieu_tvu":"Giới thiệu trường Đại học Trà Vinh",
+    "tin_tuc_noi_bat":"Tin tức nổi bật",
+    "xem_them":"Xem thêm",
+    "doi_tac_cua_chung_toi":"Đối tác của chúng tôi",
+    "ket_noi_researchers":"Kết nối với Researches Team",
+    "dia_chi_researchers":"Số 126 Nguyễn Thiện Thành - Khóm 4, Phường 5, Thành phố Trà Vinh, tỉnh Trà Vinh",
+    "dien_thoai_rt":"Điện thoại",
+    "kham_pha_tat_ca_tin_tuc":"Khám phá tất cả tin tức",
+    "theo_phan_loai":"Theo phân loại",
+    "moi_thac_mac_xin_vui_long_lien_he":"Mọi thắc mắc xin vui lòng liên hệ",
+    "dang_ky":"Đăng ký",
+    "danh_sach_nhom_nghien_cuu":"Danh sách nhóm nghiên cứu",
+    "them":"Thêm",
+    "tim_kiem_o_day_ne":"Tìm kiếm ở đây nè",
+    "hien_thi":"Hiển thị",
+    "muc":"mục",
+    "dang_hien_thi":"Đang hiển thị",
+    "den":"đến",
+    "cua":"của",
+    "da_loc_tu_tong_so":"Đã lọc từ tổng số",
+    "khong_co_du_lieu":"Không có dữ liệu",
+    "khong_tim_thay_ket_qua_phu_hop":"Không tìm thấy kết quả phù hợp",
+    "tiep":"Tiếp",
+    "truoc":"Trước",
+    "dau":"Đầu",
+    "cuoi":"Cuối",
+    "thiet_ke_boi":"Thiết kế bởi",
+    "ma_nhom":"Mã nhóm",
+    "ten_nhom":"Tên nhóm",
+    "tuy_chon":"Tùy chọn",
+    "them_nhom_moi":"Thêm nhóm mới!",
+    "luu":"Lưu",
+    "chinh_sua_ten_nhom":"Chỉnh sửa tên nhóm",
+    "them_nhom_thanh_cong":"Thêm nhóm thành công!",
+    "ten_nhom_nay_da_duoc_su_dung":"Tên nhóm này đã được sử dụng!",
+    "co_loi_vui_long_thu_lai":"Có lỗi vui lòng thử lại!",
+    "chinh_sua_nhom_thanh_cong":"Chỉnh sửa nhóm thành công!",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
     "":"",
     "":"",
     "":"",
