--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -65,47 +65,47 @@
     "co_loi_vui_long_thu_lai":"An error occurred, please try again!",
     "chinh_sua_nhom_thanh_cong":"Team editing successful!",
     "ten_nhom_nay_da_duoc_su_dung":"This team name is already in use!",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
+    "xoa":"Delete",
+    "ma_tv":"Member ID",
+    "ho_ten":"Full name",
+    "nhom":"Team",
+    "so_dien_thoai":"Phone",
+    "vai_tro":"Role",
+    "ban_co_chac_xoa_nhung_thanh_vien_da_chon":"Are you sure you want to delete selected members?",
+    "huy":"Cancel",
+    "xoa_thanh_vien_thanh_cong":"Member deleted successfully!",
+    "xoa_thanh_vien_khong_thanh_cong":"Member deletion failed!",
+    "vui_long_chon_it_nhat_mot_thanh_vien_de_xoa":"Please select at least one member to delete!",
+    "ban_co_chac_chan_muon_xoa":"Are you sure you want to delete?",
+    "hoc_ham":"Academic rank",
+    "hoc_vi":"Degree",
+    "noi_cong_tac":"Work place",
+    "thong_tin_thanh_vien":"Member Information",
+    "khong_the_lay_thong_tin_thanh_vien":"Unable to get member information!",
+    "them_moi_thanh_vien":"Add new member",
+    "mat_khau":"Password",
+    "anh_dai_dien":"Avatar",
+    "quyen":"Permission",
+    "truong_nhom":"Leader",
+    "pho_nhom":"Team deputy",
+    "admin":"Admin",
+    "chon_vai_tro":"Select role",
+    "chon_quyen":"Select permission",
+    "tro_ve":"Back",
+    "them_thanh_vien_thanh_cong":"Add member successfully!",
+    "so_dien_thoai_da_ton_tai":"Phone number already exists!",
+    "email_da_ton_tai":"Email already exists!",
+    "ban_chua_nhap_du_thong_tin_can_thiet":"You have not entered all the necessary information!",
+    "vui_long_nhap_ho_ten":"Please enter your full name!",
+    "vui_long_nhap_so_dien_thoai":"Please enter your phone!",
+    "vui_long_chon_nhom":"Please chose team!",
+    "vui_long_nhap_noi_cong_tac":"Please enter your place of work!",
+    "vui_long_nhap_email":"Please enter your email!",
+    "vui_long_nhap_mat_khau":"Please enter your password!",
+    "vui_long_nhap_du_10_sdt":"Please enter all 10 phone numbers!",
+    "Vui lòng nhập địa chỉ email hợp lệ!":"Please enter a valid email address!",
+    "vui_long_chon_vai_tro":"Please choose a role!",
+    "vui_long_chon_quyen":"Please choose the permission!",
     "":"",
     "":"",
     "":"",
