--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -61,47 +61,47 @@
     "ten_nhom_nay_da_duoc_su_dung":"Tên nhóm này đã được sử dụng!",
     "co_loi_vui_long_thu_lai":"Có lỗi vui lòng thử lại!",
     "chinh_sua_nhom_thanh_cong":"Chỉnh sửa nhóm thành công!",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
+    "xoa":"Xóa",
+    "ma_tv":"Mã TV",
+    "ho_ten":"Họ tên",
+    "nhom":"Nhóm",
+    "so_dien_thoai":"Số điện thoại",
+    "vai_tro":"Vai trò",
+    "ban_co_chac_xoa_nhung_thanh_vien_da_chon":"Bạn có chắc chắn muốn xóa các thành viên đã chọn?",
+    "huy":"Hủy",
+    "xoa_thanh_vien_thanh_cong":"Xóa thành viên thành công",
+    "xoa_thanh_vien_khong_thanh_cong":"Xóa thành viên không thành công",
+    "vui_long_chon_it_nhat_mot_thanh_vien_de_xoa":"Vui lòng chọn ít nhất một thành viên để xóa!",
+    "ban_co_chac_chan_muon_xoa":"Bạn có chắc chắn muốn xóa?",
+    "hoc_ham":"Học hàm",
+    "hoc_vi":"Học vị",
+    "noi_cong_tac":"Nơi công tác",
+    "thong_tin_thanh_vien":"Thông tin thành viên",
+    "khong_the_lay_thong_tin_thanh_vien":"Không thể lấy thông tin thành viên!",
+    "them_moi_thanh_vien":"Thêm mới thành viên",
+    "mat_khau":"Mật khẩu",
+    "anh_dai_dien":"Ảnh đại diện",
+    "quyen":"Quyền",
+    "truong_nhom":"Trưởng nhóm",
+    "pho_nhom":"Phó nhóm",
+    "admin":"Quản trị viên",
+    "chon_vai_tro":"Chọn vai trò",
+    "chon_quyen":"Chọn quyền",
+    "tro_ve":"Trở về",
+    "them_thanh_vien_thanh_cong":"Thêm thành viên thành công",
+    "so_dien_thoai_da_ton_tai":"Số điện thoại đã tồn tại!",
+    "email_da_ton_tai":"Email đã tồn tại",
+    "ban_chua_nhap_du_thong_tin_can_thiet":"Bạn chưa nhập đủ thông tin cần thiết!",
+    "vui_long_nhap_ho_ten":"Vui lòng nhập họ tên!",
+    "vui_long_nhap_so_dien_thoai":"Vui lòng nhập số điện thoại!",
+    "vui_long_chon_nhom":"Vui lòng chọn nhóm",
+    "vui_long_nhap_noi_cong_tac":"Vui lòng nhập nơi công tác!",
+    "vui_long_nhap_email":"Vui lòng nhập email!",
+    "vui_long_nhap_mat_khau":"Vui lòng nhập mật khẩu",
+    "vui_long_nhap_du_10_sdt":"Vui lòng nhập đủ 10 số điện thoại!",
+    "vui_long_nhap_dia_chi_email_hop_le":"Vui lòng nhập địa chỉ email hợp lệ!",
+    "vui_long_chon_vai_tro":"Vui lòng chọn vai trò!",
+    "vui_long_chon_quyen":"Vui lòng chọn quyền!",
     "":"",
     "":"",
     "":"",
