upload sub thanh-vien

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -106,24 +106,24 @@
     "Vui lòng nhập địa chỉ email hợp lệ!":"Please enter a valid email address!",
     "vui_long_chon_vai_tro":"Please choose a role!",
     "vui_long_chon_quyen":"Please choose the permission!",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
+    "cap_nhat_thanh_vien":"Update Member",
+    "chon_nhom":"Choose team",
+    "chua_co_anh_dai_dien":"No avatar yet",
+    "cap_nhat":"Update",
+    "cap_nhat_thanh_vien_thanh_cong":"Member update successful!",
+    "chinh_sua_thong_tin":"Edit information",
+    "thong_tin_ca_nhan":"Personal information",
+    "lich_bao_cao_cua_toi":"My reporting schedule",
+    "da_bao_cao":"Reported",
+    "chua_bao_cao":"Not yet reported",
+    "ngay_bao_cao":"Day report",
+    "dia_diem_bao_cao":"Reporting location",
+    "thoi_gian_bat_dau":"Start time",
+    "thoi_gian_ket_thuc":"End time",
+    "nguoi_tham_gia":"Participants",
+    "khach_moi":"Guest",
+    "nguoi_bao_cao":"Annunciator",
+    "thu_ky":"Secretary",
     "":"",
     "":"",
     "":"",
