--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -102,24 +102,24 @@
     "vui_long_nhap_dia_chi_email_hop_le":"Vui lòng nhập địa chỉ email hợp lệ!",
     "vui_long_chon_vai_tro":"Vui lòng chọn vai trò!",
     "vui_long_chon_quyen":"Vui lòng chọn quyền!",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
+    "cap_nhat_thanh_vien":"Cập nhật thành viên",
+    "chon_nhom":"Chọn nhóm",
+    "chua_co_anh_dai_dien":"Chưa có ảnh đại diện",
+    "cap_nhat":"Cập nhật",
+    "cap_nhat_thanh_vien_thanh_cong":"Cập nhật thành viên thành công!",
+    "chinh_sua_thong_tin":"Chỉnh sửa thông tin",
+    "thong_tin_ca_nhan":"Thông tin cá nhân",
+    "lich_bao_cao_cua_toi":"Lịch báo cáo của tôi",
+    "da_bao_cao":"Đã báo cáo",
+    "chua_bao_cao":"Chưa báo cáo",
+    "ngay_bao_cao":"Ngày báo cáo",
+    "dia_diem_bao_cao":"Địa điểm báo cáo",
+    "thoi_gian_bat_dau":"Thời gian bắt đầu",
+    "thoi_gian_ket_thuc":"Thời gian kết thúc",
+    "nguoi_tham_gia":"Người tham gia",
+    "khach_moi":"Khách mời",
+    "nguoi_bao_cao":"Người báo cáo",
+    "thu_ky":"Thư ký",
     "":"",
     "":"",
     "":"",
