update sub hoanthanh-thanhvien

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -124,7 +124,7 @@
     "khach_moi":"Guest",
     "nguoi_bao_cao":"Annunciator",
     "thu_ky":"Secretary",
-    "":"",
+    "cap_nhat_thong_tin_ca_nhan":"Update personal information",
     "":"",
     "":"",
     "":"",
