--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -120,7 +120,7 @@
     "khach_moi":"Khách mời",
     "nguoi_bao_cao":"Người báo cáo",
     "thu_ky":"Thư ký",
-    "":"",
+    "cap_nhat_thong_tin_ca_nhan":"Cập nhật thông tin cá nhân",
     "":"",
     "":"",
     "":"",
