update sub lich-bao-cao

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -125,6 +125,158 @@
     "nguoi_bao_cao":"Annunciator",
     "thu_ky":"Secretary",
     "cap_nhat_thong_tin_ca_nhan":"Update personal information",
+    "danh_sach_lich_bao_cao":"List of reporting schedules",
+    "tham_du_seminar":"Attend seminars",
+    "ma_lich":"Calendar ID",
+    "ten_lich_bao_cao":"Report schedule name",
+    "trang_thai":"Status",
+    "them_moi_lich_bao_cao":"Add new report schedule",
+    "vui_long_nhap_dia_diem_bao_cao":"Please enter reporting location!",
+    "vui_long_chon_ngay_bao_cao":"Please select a reporting date!",
+    "vui_long_nhap_thoi_gian_bat_dau":"Please enter start time!",
+    "vui_long_nhap_thoi_gian_ket_thuc":"Please enter end time!",
+    "them_lich_bao_cao_thanh_cong":"Added report schedule successfully!",
+    "cap_nhat_lich_bao_cao":"Update reporting schedule",
+    "cap_nhat_lich_bao_cao_thanh_cong":"Update report schedule successfully!",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
     "":"",
     "":"",
     "":"",
