--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -121,6 +121,118 @@
     "nguoi_bao_cao":"Người báo cáo",
     "thu_ky":"Thư ký",
     "cap_nhat_thong_tin_ca_nhan":"Cập nhật thông tin cá nhân",
+    "danh_sach_lich_bao_cao":"Danh sách lịch báo cáo",
+    "tham_du_seminar":"Tham dự seminar",
+    "ma_lich":"Mã lịch",
+    "ten_lich_bao_cao":"Tên lịch báo cáo",
+    "trang_thai":"Trạng thái",
+    "them_moi_lich_bao_cao":"Thêm mới lịch báo cáo",
+    "vui_long_nhap_dia_diem_bao_cao":"Vui lòng nhập địa điểm báo cáo!",
+    "vui_long_chon_ngay_bao_cao":"Vui lòng chọn ngày báo cáo!",
+    "vui_long_nhap_thoi_gian_bat_dau":"Vui lòng nhập thời gian bắt đầu!",
+    "vui_long_nhap_thoi_gian_ket_thuc":"Vui lòng nhập thời gian kết thúc!",
+    "them_lich_bao_cao_thanh_cong":"Thêm lịch báo cáo thành công",
+    "cap_nhat_lich_bao_cao":"Cập nhật lịch báo cáo",
+    "cap_nhat_lich_bao_cao_thanh_cong":"Cập nhật lịch báo cáo thành công!",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
     "":"",
     "":"",
     "":"",
