update sub tham-du

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -138,14 +138,14 @@
     "them_lich_bao_cao_thanh_cong":"Added report schedule successfully!",
     "cap_nhat_lich_bao_cao":"Update reporting schedule",
     "cap_nhat_lich_bao_cao_thanh_cong":"Update report schedule successfully!",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
+    "danh_sach_thanh_vien_tham_du_seminar":"List of members attending the seminar",
+    "xoa_tham_du_thanh_cong":"Delete attendance successfully!",
+    "xoa_tham_du_khong_thanh_cong":"Delete attendance failed!",
+    "them_thanh_vien_tham_du_seminar":"Add members to attend the seminar",
+    "vui_long_chon_lich_bao_cao":"Please select a reporting schedule!",
+    "vui_long_chon_thanh_vien":"Please choose a member!",
+    "them_thanh_vien_tham_du_seminar_thanh_cong":"Successfully added members to attend the seminar!",
+    "loi_may_chu":"Server error!",
     "":"",
     "":"",
     "":"",
