--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -134,14 +134,14 @@
     "them_lich_bao_cao_thanh_cong":"Thêm lịch báo cáo thành công",
     "cap_nhat_lich_bao_cao":"Cập nhật lịch báo cáo",
     "cap_nhat_lich_bao_cao_thanh_cong":"Cập nhật lịch báo cáo thành công!",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
+    "danh_sach_thanh_vien_tham_du_seminar":"Danh sách thành viên tham dự seminar",
+    "xoa_tham_du_thanh_cong":"Xóa tham dự thành công!",
+    "xoa_tham_du_khong_thanh_cong":"Xóa tham dự không thành công!",
+    "them_thanh_vien_tham_du_seminar":"Thêm thành viên tham dự seminar",
+    "vui_long_chon_lich_bao_cao":"Vui lòng chọn lịch báo cáo",
+    "vui_long_chon_thanh_vien":"Vui lòng chọn thành viên!",
+    "them_thanh_vien_tham_du_seminar_thanh_cong":"Thêm thành viên tham dự seminar thành công!",
+    "loi_may_chu":"Lỗi máy chủ!",
     "":"",
     "":"",
     "":"",
