update sub baibaocao

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -146,29 +146,30 @@
     "vui_long_chon_thanh_vien":"Please choose a member!",
     "them_thanh_vien_tham_du_seminar_thanh_cong":"Successfully added members to attend the seminar!",
     "loi_may_chu":"Server error!",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
+    "danh_sach_bai_bao_cao":"List of reports",
+    "bai_bao_cao_cua_toi":"My report",
+    "ten_bai_bao_cao":"Name of the report",
+    "thong_tin_bai_bao_cao":"REPORT INFORMATION",
+    "link_goc_bai_bao_cao":"Original link of the report",
+    "link_file_ppt":"Link file PowerPoint ",
+    "tai_xuong":"Download here",
+    "tat_ca_binh_luan":"All comments",
+    "viet_binh_luan":"Write a comment...",
+    "gui":"Send",
+    "ma_bai_bao_cao":"Report ID",
+    "danh_sach_bai_bao_cao_cua_toi":"List of my reports",
+    "cap_nhat_bai_bao_cao":"Update report",
+    "thong_tin_ngay_bao_cao":"Report date information",
+    "tep_ppt":"File PPT",
+    "cap_nhat_bai_bao_cao_thanh_cong":"Updated report successfully!",
+    "ten_bai_bao_cao_da_ton_tai":"The name of the report already exists",
+    "loi_khi_lay_du_lieu":"Error while retrieving data",
+    "vui_long_nhap_ten_bai_bao_cao":"Please enter the name of the report!",
+    "vui_long_nhap_link_goc_bai_bao_cao":"Please enter the original link of the report!",
+    "chon_lich_bao_cao":"Select reporting schedule",
+    "co_the_khong_tai_len_ppt":"PPT files may not be uploaded",
+    "dang_xu_ly":"Processing ...",
+    "dang_ky_thanh_cong":"Sign up success!",
     "":"",
     "":"",
     "":"",
