--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -142,30 +142,30 @@
     "vui_long_chon_thanh_vien":"Vui lòng chọn thành viên!",
     "them_thanh_vien_tham_du_seminar_thanh_cong":"Thêm thành viên tham dự seminar thành công!",
     "loi_may_chu":"Lỗi máy chủ!",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
+    "danh_sach_bai_bao_cao":"Danh sách bài báo cáo",
+    "bai_bao_cao_cua_toi":"Bài báo cáo của tôi",
+    "ten_bai_bao_cao":"Tên bài báo cáo",
+    "thong_tin_bai_bao_cao":"Thông tin bài báo cáo",
+    "link_goc_bai_bao_cao":"Link gốc bài báo cáo",
+    "link_file_ppt":"Đường dẫn tới tệp PowerPoint",
+    "tai_xuong":"Tải xuống tại đây",
+    "tat_ca_binh_luan":"Tất cả bình luận",
+    "viet_binh_luan":"Viết bình luận...",
+    "gui":"Gửi",
+    "ma_bai_bao_cao":"Mã bài báo cáo",
+    "danh_sach_bai_bao_cao_cua_toi":"Danh sách bài báo cáo của tôi",
+    "cap_nhat_bai_bao_cao":"Cập nhật bài báo cáo",
+    "thong_tin_ngay_bao_cao":"Thông tin ngày báo cáo",
+    "tep_ppt":"Tệp PPT",
+    "cap_nhat_bai_bao_cao_thanh_cong":"Cập nhật bài báo cáo thành công!",
+    "ten_bai_bao_cao_da_ton_tai":"Tên bài báo cáo đã tồn tại",
+    "loi_khi_lay_du_lieu":"Lỗi khi lấy dữ liệu!",
+    "vui_long_nhap_ten_bai_bao_cao":"Vui lòng nhập tên bài báo cáo!",
+    "vui_long_nhap_link_goc_bai_bao_cao":"Vui lòng nhập link gốc bài báo cáo!",
+    "chon_lich_bao_cao":"Chọn lịch báo cáo",
+    "co_the_khong_tai_len_ppt":"có thể không tải lên file PPT",
+    "dang_xu_ly":"Đang xử lý ...",
+    "dang_ky_thanh_cong":"Đăng ký thành công!",
     "":"",
     "":"",
     "":"",
