update sub create-congtrinh

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -170,29 +170,29 @@
     "co_the_khong_tai_len_ppt":"PPT files may not be uploaded",
     "dang_xu_ly":"Processing ...",
     "dang_ky_thanh_cong":"Sign up success!",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
+    "danh_sach_cong_trinh":"List of construction",
+    "loai_cong_trinh":"Type of construction",
+    "tham_gia_cong_trinh":"Participate construction",
+    "ma_ct":"Construction ID",
+    "ten_cong_trinh":"Construction name",
+    "nam":"Year",
+    "tinh_trang":"Situation",
+    "them_moi_cong_trinh":"Add new construction",
+    "vui_long_chon_loai_cong_trinh":"Please select construction type!",
+    "vui_long_nhap_ten_cong_trinh":"Please enter construction name!",
+    "vui_long_nhap_nam":"Please enter year",
+    "vui_long_nhap_tap_chi":"Please enter the magazine!",
+    "vui_long_chon_tinh_trang_cong_trinh":"Please select construction situation!",
+    "vui_long_chon_trang_thai_cong_trinh":"Please select construction status!",
+    "chon_loai_cong_trinh":"Select construction type",
+    "chon_tinh_trang":"Select situation",
+    "da_xuat_ban":"Published",
+    "chua_xuat_ban":"Unpublished",
+    "chon_trang_thai":"Select status",
+    "cong_khai":"Public",
+    "khong_cong_khai":"Not public",
+    "them_cong_trinh_thanh_cong":"Add new construction successfully!",
+    "ten_cong_trinh_da_ton_tai":"Construction name already exists!",
     "":"",
     "":"",
     "":"",
