--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -166,29 +166,29 @@
     "co_the_khong_tai_len_ppt":"có thể không tải lên file PPT",
     "dang_xu_ly":"Đang xử lý ...",
     "dang_ky_thanh_cong":"Đăng ký thành công!",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
+    "danh_sach_cong_trinh":"Danh sách công trình",
+    "loai_cong_trinh":"Loại công trình",
+    "tham_gia_cong_trinh":"Tham gia công trình",
+    "ma_ct":"Mã công trình",
+    "ten_cong_trinh":"Tên công trình",
+    "nam":"Năm",
+    "tinh_trang":"Tình trạng",
+    "them_moi_cong_trinh":"Thêm mới công trình",
+    "vui_long_chon_loai_cong_trinh":"Vui lòng chọn loại công trình!",
+    "vui_long_nhap_ten_cong_trinh":"Vui lòng nhập tên công trình!",
+    "vui_long_nhap_nam":"Vui lòng nhập năm!",
+    "vui_long_nhap_tap_chi":"Vui lòng nhập tạp chí!",
+    "vui_long_chon_tinh_trang_cong_trinh":"Vui lòng chọn tình trạng công trình!",
+    "vui_long_chon_trang_thai_cong_trinh":"Vui lòng chọn trạng thái công trình!",
+    "chon_loai_cong_trinh":"Chọn loại công trình ",
+    "chon_tinh_trang":"Chọn tình trạng",
+    "da_xuat_ban":"Đã xuất bản",
+    "chua_xuat_ban":"Chưa xuất bản",
+    "chon_trang_thai":"Chọn trạng thái",
+    "cong_khai":"Công khai",
+    "khong_cong_khai":"Không công khai",
+    "them_cong_trinh_thanh_cong":"Thêm mới công trình thành công!",
+    "ten_cong_trinh_da_ton_tai":"Tên công trình đã tồn tại!",
     "":"",
     "":"",
     "":"",
