--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -193,8 +193,8 @@
     "khong_cong_khai":"Not public",
     "them_cong_trinh_thanh_cong":"Add new construction successfully!",
     "ten_cong_trinh_da_ton_tai":"Construction name already exists!",
-    "":"",
-    "":"",
+    "cap_nhat_cong_trinh":"Construction update",
+    "dong":"Close",
     "":"",
     "":"",
     "":"",
