--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -189,8 +189,8 @@
     "khong_cong_khai":"Không công khai",
     "them_cong_trinh_thanh_cong":"Thêm mới công trình thành công!",
     "ten_cong_trinh_da_ton_tai":"Tên công trình đã tồn tại!",
-    "":"",
-    "":"",
+    "cap_nhat_cong_trinh":"Cập nhật công trình",
+    "dong":"Đóng",
     "":"",
     "":"",
     "":"",
