--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -195,7 +195,7 @@
     "ten_cong_trinh_da_ton_tai":"Construction name already exists!",
     "cap_nhat_cong_trinh":"Construction update",
     "dong":"Close",
-    "":"",
+    "them_thanh_vien_tham_du":"Add members to join",
     "":"",
     "":"",
     "":"",
