--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -191,7 +191,7 @@
     "ten_cong_trinh_da_ton_tai":"Tên công trình đã tồn tại!",
     "cap_nhat_cong_trinh":"Cập nhật công trình",
     "dong":"Đóng",
-    "":"",
+    "them_thanh_vien_tham_du":"Thêm thành viên tham dự",
     "":"",
     "":"",
     "":"",
