--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -192,7 +192,7 @@
     "cap_nhat_cong_trinh":"Cập nhật công trình",
     "dong":"Đóng",
     "them_thanh_vien_tham_du":"Thêm thành viên tham dự",
-    "":"",
+    "them_thanh_cong":"Thêm thành công!",
     "":"",
     "":"",
     "":"",
