--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -37,7 +37,7 @@
     "dang_ky":"Đăng ký",
     "danh_sach_nhom_nghien_cuu":"Danh sách nhóm nghiên cứu",
     "them":"Thêm",
-    "tim_kiem_o_day_ne":"Tìm kiếm ở đây nè",
+    "tim_kiem_o_day_ne":"Tìm kiếm",
     "hien_thi":"Hiển thị",
     "muc":"mục",
     "dang_hien_thi":"Đang hiển thị",
