--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -196,90 +196,90 @@
     "cap_nhat_cong_trinh":"Construction update",
     "dong":"Close",
     "them_thanh_vien_tham_du":"Add members to join",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
+    "vui_long_nhap_thuoc_tap_chi_nao":"Please enter which magazine!",
+    "thuoc_tap_chi":"Belong to magazine",
+    "thanh_vien_tu_nhom_cua_ban":"Members from your group",
+    "thanh_vien_tu_cac_nhom_khac":"Members from other groups",
+    "danh_sach_loai_cong_trinh":"List of construction types",
+    "ma_loai":"Type ID",
+    "ten_loai":"Type name",
+    "them_loai_cong_trinh_moi":"Add new construction type",
+    "chinh_sua_ten_loai_cong_trinh":"Edit construction type name",
+    "them_moi_tham_gia_cong_trinh":"Add new construction participants",
+    "them_thanh_vien_tham_gia_cong_trinh":"Add members to the construction",
+    "chon_thanh_vien":"Choose member",
+    "danh_sach_tham_gia_cong_trinh":"List of construction participants",
+    "xoa_tham_gia_thanh_cong":"Delete participation successful",
+    "xoa_tham_gia_khong_thanh_cong":"Delete participation failed!",
+    "danh_sach_y_tuong_moi":"List of new ideas",
+    "stt":"NO",
+    "noi_dung":"Content",
+    "hinh_anh":"Image",
+    "them_moi_y_tuong_moi":"Add new ideas",
+    "vui_long_chon_bai_bao_cao":"Please select a report",
+    "vui_long_nhap_noi_dung_y_tuong":"Please enter content new idea!",
+    "vui_long_nhap_hinh_anh_y_tuong":"Please enter new idea image!",
+    "vui_long_chon_trang_thai_y_tuong":"Please select new idea status!",
+    "chon_bai_bao_cao":"Choose report",
+    "them_moi_y_tuong_moi_thanh_cong":"Add new successful ideas",
+    "ten_lich_bao_cao_da_ton_tai":"Report schedule name already exists!",
+    "cap_nhat_y_tuong_moi":"Update new ideas",
+    "tep_word":"File word",
+    "tep_word_hien_tai":"Current word file",
+    "tai_ve":"Download",
+    "khong_co_tep_word":"No word file",
+    "khong_co_hinh_anh":"No image",
+    "hinh_anh_hien_tai":"Current image",
+    "cap_nhat_y_tuong_moi_thanh_cong":"Update new ideas successfully",
+    "xoa_y_tuong_moi_thanh_cong":"Delete new idea successfully",
+    "xoa_y_tuong_moi_khong_thanh_cong":"Delete new ideas that are not successful",
+    "ban_co_chac_chan_muon_xoa_cac_y_tuong_da_chon":"Are you sure you want to delete the selected ideas?",
+    "vui_long_chon_it_nhat_mot_y_tuong_de_xoa":"Please select at least one idea to delete!",
+    "ma_y_tuong":"New idea ID",
+    "tai_xuong_tai_day":"Download here",
+    "khong_co_file":"No file",
+    "thong_tin_y_tuong_moi":"New idea information",
+    "danh_sach_tin_tuc":"News list",
+    "ten_tin_tuc":"News Name",
+    "noi_bat":"Outstanding",
+    "ma_tt":"News ID",
+    "thong_tin_tin_tuc":"News Information",
+    "khong_the_lay_thong_tin_tin_tuc":"Unable to get news information!",
+    "Xóa tin tức thành công":"Delete news successfully!",
+    "xoa_tin_tuc_khong_thanh_cong":"Delete news failed!",
+    "ban_co_chac_chan_muon_xoa_cac_tin_tuc_da_chon":"Are you sure you want to delete the selected news?",
+    "vui_long_chon_it_nhat_mot_tin_tuc_de_xoa":"Please select at least one news to delete!",
+    "cap_nhat_thanh_cong":"Update successful!",
+    "Cập nhật không thành công!":"Update failed!",
+    "them_moi_tin_tuc":"Add new news",
+    "vui_long_chon_loai_tin_tuc":"Please select news type!",
+    "vui_long_nhap_ten_tin_tuc":"Please enter news name!",
+    "vui_long_nhap_hinh_anh_tin_tuc":"Please enter news image!",
+    "vui_long_nhap_ngay_dang_tin_tuc":"Please select the date of news publication!",
+    "vui_long_chon_trang_thai_tin_tuc":"Please select news status!",
+    "loai_tin_tuc":"News type",
+    "ngay_dang":"Date submitted",
+    "them_tin_tuc_thanh_cong":"More news successfully added!",
+    "cap_nhat_tin_tuc":"News update",
+    "cap_nhat_tin_tuc_thanh_cong":"News update successful!",
+    "danh_sach_nhat_ky_hoat_dong":"Activity log list",
+    "nguoi_dung":"User",
+    "hoat_dong":"Activity",
+    "thoi_gian":"Time",
+    "thong_ke_bai_bao_cao":"Report statistics",
+    "so_luong_bbc":"Number of reports",
+    "chi_tiet":"Detail",
+    "chon_nam":"Choose year",
+    "top_10_tv":"Top 10 Members With Most Reports",
+    "danh_sach_bai_bao_cao_cua":"List of reports of",
+    "thong_ke_cong_trinh":"Construction statistics",
+    "so_luong_ct":"Number of participating projects",
+    "tv_tham_gia_ct":"Construction participants",
+    "thong_ke_y_tuong_moi":"New idea statistics",
+    "sl_y_tuong_da_ht":"Number of completed ideas",
+    "sl_y_tuong_chua_ht":"Number of unfinished ideas",
+    "danh_Sach_ytm_cua":"List of new ideas",
+    "khong_co_flie":"No file",
     "":"",
     "":"",
     "":"",
