--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -193,91 +193,90 @@
     "dong":"Đóng",
     "them_thanh_vien_tham_du":"Thêm thành viên tham dự",
     "them_thanh_cong":"Thêm thành công!",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
+    "vui_long_nhap_thuoc_tap_chi_nao":"Vui lòng nhập thuộc tạp chí nào!",
+    "thuoc_tap_chi":"Thuộc tạp chí",
+    "thanh_vien_tu_nhom_cua_ban":"Thành viên từ nhóm của bạn",
+    "thanh_vien_tu_cac_nhom_khac":"Thành viên từ các nhóm khác",
+    "danh_sach_loai_cong_trinh":"Danh sách loại công trình",
+    "ma_loai":"Mã loại",
+    "ten_loai":"Tên loại",
+    "them_loai_cong_trinh_moi":"Thêm loại công trình mới",
+    "chinh_sua_ten_loai_cong_trinh":"Chỉnh sửa tên loại công trình",
+    "them_moi_tham_gia_cong_trinh":"Thêm mới tham gia công trình",
+    "them_thanh_vien_tham_gia_cong_trinh":"Thêm thành viên tham gia công trình",
+    "chon_thanh_vien":"Chọn thành viên",
+    "danh_sach_tham_gia_cong_trinh":"Danh sách tham gia công trình",
+    "xoa_tham_gia_thanh_cong":"Xóa tham gia thành công",
+    "xoa_tham_gia_khong_thanh_cong":"Xóa tham gia không thành công!",
+    "danh_sach_y_tuong_moi":"Danh sách ý tưởng mới",
+    "stt":"STT",
+    "noi_dung":"Nội dung",
+    "hinh_anh":"Hình ảnh",
+    "them_moi_y_tuong_moi":"Thêm mới ý tưởng mới",
+    "vui_long_chon_bai_bao_cao":"Vui lòng chọn bài báo cáo",
+    "vui_long_nhap_noi_dung_y_tuong":"Vui lòng nhập nội dung ý tưởng!",
+    "vui_long_nhap_hinh_anh_y_tuong":"Vui lòng nhập hình ảnh ý tưởng!",
+    "vui_long_chon_trang_thai_y_tuong":"Vui lòng chọn trạng thái ý tưởng!",
+    "chon_bai_bao_cao":"Chọn bài báo cáo",
+    "them_moi_y_tuong_moi_thanh_cong":"Thêm ý tưởng mới thành công",
+    "ten_lich_bao_cao_da_ton_tai":"Tên lịch báo cáo đã tồn tại!",
+    "cap_nhat_y_tuong_moi":"Cập nhật ý tưởng mới",
+    "tep_word":"Tệp word",
+    "tep_word_hien_tai":"Tệp word hiện tại",
+    "tai_ve":"Tải về",
+    "khong_co_tep_word":"Không có tệp word",
+    "khong_co_hinh_anh":"Không có hình ảnh",
+    "hinh_anh_hien_tai":"Hình ảnh hiện tại",
+    "cap_nhat_y_tuong_moi_thanh_cong":"Cập nhật ý tưởng mới thành công!",
+    "xoa_y_tuong_moi_thanh_cong":"Xóa ý tưởng mới thành công",
+    "xoa_y_tuong_moi_khong_thanh_cong":"Xóa ý tưởng mới không thành công",
+    "ban_co_chac_chan_muon_xoa_cac_y_tuong_da_chon":"Bạn có chắc chắn muốn xóa các ý tưởng đã chọn?",
+    "vui_long_chon_it_nhat_mot_y_tuong_de_xoa":"Vui lòng chọn ít nhất một ý tưởng để xóa!",
+    "ma_y_tuong":"Mã ý tưởng mới",
+    "tai_xuong_tai_day":"Tải xuống tại đây",
+    "khong_co_file":"Không có file",
+    "thong_tin_y_tuong_moi":"Thông tin ý tưởng mới",
+    "danh_sach_tin_tuc":"Danh sách tin tức",
+    "ten_tin_tuc":"Tên tin tức",
+    "noi_bat":"Nổi bật",
+    "ma_tt":"Mã tin tức",
+    "thong_tin_tin_tuc":"Thông tin tin tức",
+    "khong_the_lay_thong_tin_tin_tuc":"Không thể lấy thông tin tin tức!",
+    "xoa_tin_tuc_thanh_cong":"Xóa tin tức thành công!",
+    "xoa_tin_tuc_khong_thanh_cong":"Xóa tin tức không thành công!",
+    "ban_co_chac_chan_muon_xoa_cac_tin_tuc_da_chon":"Bạn có chắc chắn muốn xóa các tin tức đã chọn?",
+    "vui_long_chon_it_nhat_mot_tin_tuc_de_xoa":"Vui lòng chọn ít nhất một tin tức để xóa!",
+    "cap_nhat_thanh_cong":"Cập nhật thành công!",
+    "cap_nhat_khong_thanh_cong":"Cập nhật không thành công!",
+    "them_moi_tin_tuc":"Thêm mới tin tức",
+    "vui_long_chon_loai_tin_tuc":"Vui lòng chọn loại tin tức!",
+    "vui_long_nhap_ten_tin_tuc":"Vui lòng nhập tên tin tức!",
+    "vui_long_nhap_hinh_anh_tin_tuc":"Vui lòng nhập hình ảnh tin tức!",
+    "vui_long_nhap_ngay_dang_tin_tuc":"Vui lòng nhập ngày đăng tin tức!",
+    "vui_long_chon_trang_thai_tin_tuc":"Vui lòng chọn trạng thái tin tức!",
+    "loai_tin_tuc":"Loại tin tức",
+    "ngay_dang":"Ngày đăng",
+    "them_tin_tuc_thanh_cong":"Thêm tin tức thành công!",
+    "cap_nhat_tin_tuc":"Cập nhật tin tức",
+    "cap_nhat_tin_tuc_thanh_cong":"Cập nhật tin tức thành công!",
+    "danh_sach_nhat_ky_hoat_dong":"Danh sách nhật ký hoạt động",
+    "nguoi_dung":"Người dùng",
+    "hoat_dong":"Hoạt động",
+    "thoi_gian":"Thời gian",
+    "thong_ke_bai_bao_cao":"Thống kê bài báo cáo",
+    "so_luong_bbc":"Số lượng bài báo cáo",
+    "chi_tiet":"Chi tiết",
+    "chon_nam":"Chọn năm",
+    "top_10_tv":"Top 10 Thành Viên Có Nhiều Bài Báo Cáo Nhất",
+    "danh_sach_bai_bao_cao_cua":"Danh sách bài báo cáo của",
+    "thong_ke_cong_trinh":"Thống kê công trình",
+    "so_luong_ct":"Số lượng công trình tham gia",
+    "tv_tham_gia_ct":"Thành viên tham gia công trình",
+    "thong_ke_y_tuong_moi":"Thống kê ý tưởng mới",
+    "sl_y_tuong_da_ht":"Số lượng ý tưởng đã hoàn thành",
+    "sl_y_tuong_chua_ht":"Số lượng ý tưởng chưa hoàn thành",
+    "danh_Sach_ytm_cua":"Danh sách ý tưởng mới của",
+    "khong_co_flie":"Không có file",
     "":"",
     "":"",
     "":"",
